--- a/client/fields.jade
+++ b/client/fields.jade
@@ -12,11 +12,11 @@ template(name='number_edit')
             |#{key}
     .ui.input
         //- +clear_value                
-        input.edit_number(type='number' value=field_value placeholder=placeholder autocomplete="off")
+        input.edit_number(type='number' value=fv placeholder=placeholder autocomplete="off")
             
             
 template(name='number_view')
-    if field_value
+    if fv
         // div
         .ui.tiny.inline.header
             if icon
@@ -30,7 +30,7 @@ template(name='number_view')
                 |#{key}
             else
                 |#{this}
-        strong &nbsp; #{field_value}
+        strong &nbsp; #{fv}
 
 
 template(name='icon_edit')
@@ -45,16 +45,16 @@ template(name='icon_edit')
             |#{key}
         else
             |#{this}    
-    if field_value
-        i.large.icon(class=field_value)
+    if fv
+        i.large.icon(class=fv)
     .ui.right.icon.input
-        input.icon_val(type='text' value=field_value placeholder='fa class' autocomplete="off")
+        input.icon_val(type='text' value=fv placeholder='fa class' autocomplete="off")
     a(href="https://fomantic-ui.com/elements/icon.html" target='_window')
         i.external.icon
         |icons
 
 template(name='clear_value')
-    if field_value
+    if fv
         i.remove.link.large.icon.clear_value
 
 
@@ -71,11 +71,11 @@ template(name='time_edit')
             //- else
             //-     |#{key}
         //- +clear_value                
-        input.edit_time(type='time' value=field_value placeholder=placeholder autocomplete="off")
+        input.edit_time(type='time' value=fv placeholder=placeholder autocomplete="off")
                 
                 
 template(name='time_view')
-    if field_value
+    if fv
         .ui.inline.header
             if icon
                 i.grey.icon(class=icon)
@@ -88,7 +88,7 @@ template(name='time_view')
                 |#{key}
             else
                 |#{this}
-        strong &nbsp; #{field_value}
+        strong &nbsp; #{fv}
 
 template(name='datetime_edit')
     .ui.form
@@ -104,7 +104,7 @@ template(name='datetime_edit')
                 else
                     |#{key}
             //- +clear_value                
-            input.edit_datetime(type='datetime-local' value=field_value placeholder=placeholder autocomplete="off")
+            input.edit_datetime(type='datetime-local' value=fv placeholder=placeholder autocomplete="off")
 
 template(name='datetime_view')
     if icon
@@ -117,7 +117,7 @@ template(name='datetime_view')
         |#{key}
     else
         |#{this}
-    strong &nbsp; #{field_value}
+    strong &nbsp; #{fv}
 
 
 
@@ -135,11 +135,11 @@ template(name='date_edit')
             //- else
             //-     |#{this}
         //- +clear_value                
-        input.edit_date(type='date' value=field_value placeholder=placeholder autocomplete="off")
+        input.edit_date(type='date' value=fv placeholder=placeholder autocomplete="off")
 
 
 template(name='date_view')
-    if field_value
+    if fv
         div
         .ui.tiny.inline.header
             if icon
@@ -153,7 +153,7 @@ template(name='date_view')
                 |#{key}
             else
                 |#{this}
-        strong &nbsp; #{field_value}
+        strong &nbsp; #{fv}
 
 
 
@@ -164,12 +164,12 @@ template(name='youtube_edit')
             // if icon
             //     i.icon(class=icon)
             |youtube id
-        input.youtube_id(type='text' value=field_value placeholder=placeholder autocomplete="off")
-    if field_value
-        iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='' class=currentUser.invert_class)
+        input.youtube_id(type='text' value=fv placeholder=placeholder autocomplete="off")
+    if fv
+        iframe(width='560' height='315' src="https://www.youtube.com/embed/#{fv}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='' class=currentUser.invert_class)
 
 template(name='youtube_view')
-    if field_value
+    if fv
         if icon
             +i name=icon
             //- i.icon(class=icon)
@@ -177,9 +177,9 @@ template(name='youtube_view')
             .ui.embed.rounded(data-source="youtube" data-id=youtube_parse class=currentUser.invert_class)
             // iframe(width='560' height='315' src=url frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
         else
-            .ui.embed.rounded(data-source="youtube" data-id=field_value class=currentUser.invert_class)
+            .ui.embed.rounded(data-source="youtube" data-id=fv class=currentUser.invert_class)
 
-        //- iframe(src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+        //- iframe(src="https://www.youtube.com/embed/#{fv}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
 
 
@@ -196,10 +196,10 @@ template(name='phone_edit')
             |#{this}
     .ui.fluid.input
         //- +clear_value                
-        input.edit_phone(type='tel' value=field_value placeholder=placeholder autocomplete="off")
+        input.edit_phone(type='tel' value=fv placeholder=placeholder autocomplete="off")
 
 template(name='phone_view')
-    if field_value
+    if fv
         unless header
             div
             //- if icon
@@ -213,14 +213,14 @@ template(name='phone_view')
                     |#{key}
                 else
                     |#{this}
-        strong &nbsp; #{field_value}
+        strong &nbsp; #{fv}
 
 
 
 
 
 template(name='html_view')
-    if field_value
+    if fv
         .spacer
         // .ui.small.inline.header
         //     if icon
@@ -234,7 +234,7 @@ template(name='html_view')
         //     else
         //         |#{this}
         .f12.inverted
-            |!{field_value}
+            |!{fv}
 
 
 
@@ -256,7 +256,7 @@ template(name='html_edit')
     .ui.fluid.form
         .field.testsun
             textarea#sample.sun-editor-editable
-                |#{field_value}
+                |#{fv}
     //- if is_dev
     //- div
     //- //- +tone mode='html'
@@ -326,25 +326,25 @@ template(name='link_edit')
     .ui.inline.header
         |#{title} #{label}
     .ui.fluid.input
-        input.edit_url(type='url' value=field_value placeholder='url' autocomplete="off")
+        input.edit_url(type='url' value=fv placeholder='url' autocomplete="off")
 
 
 template(name='link_view')
-    if field_value
+    if fv
         div
         if icon
             +icon name=icon cl='ui avatar image'
         //- .ui.inline.header 
         //-     |#{title} #{label}
-        a.ui.header(href=field_value target='_window')
+        a.ui.header(href=fv target='_window')
             if label 
                 |#{label}
-        a(href=field_value target='_window')
-            |#{field_value}
-        //- img.ui.fluid.image(src=field_value)
+        a(href=fv target='_window')
+            |#{fv}
+        //- img.ui.fluid.image(src=fv)
 
 template(name='image_view')
-    if field_value
+    if fv
         //- .ui.inline.header
         //-     if icon
         //-         +icon name=icon
@@ -356,11 +356,11 @@ template(name='image_view')
         //- else
         //-     |#{this}
         //- if cl
-        //-     img(src="{{c.url field_value gravity='face' crop='fit'}}" class=cl)
+        //-     img(src="{{c.url fv gravity='face' crop='fit'}}" class=cl)
         //- else 
-        a(href="{{c.url field_value }}" target='_window')
-            img.ui.centered.rounded.image(src="{{c.url field_value crop=crop}}" height=height class=currentUser.invert_class)
-        //- a(href="{{c.url field_value gravity='face' crop='fit'}}")
+        a(href="{{c.url fv }}" target='_window')
+            img.ui.centered.rounded.image(src="{{c.url fv crop=crop}}" height=height class=currentUser.invert_class)
+        //- a(href="{{c.url fv gravity='face' crop='fit'}}")
         //-     |download
     //- +call_visual
 
@@ -377,10 +377,10 @@ template(name='image_edit')
             |#{key}
         else
             |#{this}            
-    if field_value
+    if fv
         //- label Image
-        a(href="{{c.url field_value }}" target='_window')
-            img.ui.small.inline.rounded.image(src="{{c.url field_value height=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+        a(href="{{c.url fv }}" target='_window')
+            img.ui.small.inline.rounded.image(src="{{c.url fv height=500 gravity='face' crop='fill'}}" class=currentUser.invert_class)
         a#remove_photo.ui.icon.button(title='remove image')
             i.remove.large.icon
     else
@@ -390,23 +390,23 @@ template(name='image_link_edit')
     .ui.fluid.input
         // .ui.smoothed.label image link
         i.image.icon
-        input.edit_image_link(type='link' value=field_value placeholder='image link'  autocomplete="off")
-    if field_value
-        img.ui.fluid.image(src=field_value)
+        input.edit_image_link(type='link' value=fv placeholder='image link'  autocomplete="off")
+    if fv
+        img.ui.fluid.image(src=fv)
     // +call_visual
 
 
 template(name='image_link_view')
-    .ui.header #{field_value}
-    img.ui.image(src=field_value)
+    .ui.header #{fv}
+    img.ui.image(src=fv)
 
 
 
 template(name='textarea_view')
-    if field_value
+    if fv
         div
         //- if icon
-        //-     i.icon(class=field_value)
+        //-     i.icon(class=fv)
             //- +i name=icon cl='ui inline image'
         .ui.inline.small.grey.header
             if title
@@ -418,14 +418,14 @@ template(name='textarea_view')
             //- else
             //-     |#{this}     
         //- .spacer       
-        .f11 {{nl2br field_value}}
+        .f11 {{nl2br fv}}
 
 template(name='textarea_edit')
     .ui.large.form
         .field
             label 
                 if icon
-                    // i.icon(class=field_value)
+                    // i.icon(class=fv)
                     +icon name=icon cl='ui avatar image'
                 if title
                     |#{title}
@@ -435,7 +435,7 @@ template(name='textarea_edit')
                 //-     |#{key}
                 //- else
                 //-     |#{this}
-            textarea.edit_textarea(rows='7') #{field_value}
+            textarea.edit_textarea(rows='7') #{fv}
 
 
         
@@ -453,11 +453,11 @@ template(name='text_edit')
             |#{key}
             //- +clear_value
     .ui.input(class=input_class)
-        input.edit_text(type='text' value=field_value placeholder=placeholder autocomplete="off")
+        input.edit_text(type='text' value=fv placeholder=placeholder autocomplete="off")
         
 
 template(name='text_view')
-    if field_value
+    if fv
         //- unless header
         //-     div
         //-     if icon
@@ -471,7 +471,7 @@ template(name='text_view')
                 |#{key}
             else
                 |#{this}
-        .ui.inline.header #{field_value}
+        .ui.inline.header #{fv}
 
 
 
@@ -492,22 +492,22 @@ template(name='array_edit')
         i.plus.icon
         input.new_element(type='text' placeholder='tag' autocomplete="off")
         //- +clear_value                
-    if field_value
+    if fv
         // if can_edit
-        each field_value
+        each fv
             .ui.large.label
                 i.delete.icon.remove_element
                 |#{this}
                 
 template(name='array_view')
-    if field_value
+    if fv
         div
-        if icon
-            i.icon(class=icon)
+        if i
+            i.icon(class=i)
         if label
-            .ui.inline.small.grey.header(title=title)
-                |#{label}
-        each field_value
+            .ui.inline.small.grey.header(title=t)
+                |#{l}
+        each fv
             .ui.label #{this}
 
 
@@ -600,7 +600,7 @@ template(name='child_view')
 template(name='boolean_edit')
     //- div
     .ui.circular.button.toggle_boolean(class="#{boolean_toggle_class} #{cl}" title=tooltip)
-        if field_value
+        if fv
             i.green.checkmark.large.invert.icon
         else
             i.circle.outline.icon
@@ -608,7 +608,7 @@ template(name='boolean_edit')
         if i
             +icon name=i cl='ui avatar image'
         .inline.f12
-            //- if field_value
+            //- if fv
             //-     i.checkmark.icon
             if l
                 |#{l}
@@ -618,7 +618,7 @@ template(name='boolean_edit')
                 |#{this}
         div
         //- 
-        //- if field_value
+        //- if fv
         //-     if true_icon
         //-         i.large.green.icon(class=true_icon)
         //-     else
@@ -644,14 +644,14 @@ template(name='boolean_view')
                 |#{key}
             else
                 |#{this}
-        if field_value
+        if fv
             i.large.green.checkmark.icon
         else
             i.cancel.grey.icon
 
 template(name='single_doc_view')
     div
-    if field_value
+    if fv
         if icon
             //- i.grey.icon(class=icon)
             +icon name=icon
@@ -661,7 +661,7 @@ template(name='single_doc_view')
             if icon
                 //- i.grey.icon(class=icon)
                 +icon name=icon cl='ui avatar image'
-            |#{field_value}
+            |#{fv}
             |#{doc.title}
 
 template(name='single_doc_edit')
@@ -736,10 +736,10 @@ template(name='multi_doc_view')
     div
     //- if icon
     //-     +i name=icon cl='ui mini inline image'
-    if field_value
+    if fv
         .ui.inline.header(title=key)
             |#{title} #{label}
-        each sorted_field_values
+        each sorted_fvs
             .ui.large.label
                 |#{this}
 
@@ -751,11 +751,11 @@ template(name='single_user_edit')
         i.icon(class=icon)
     .ui.inline.header 
         |#{label} #{title}
-    // if field_value
+    // if fv
     //     .pull_user.ui.icon.compact.button(title='remove user')
     //         i.remove.icon
-            //- |clear #{field_value}
-    unless field_value
+            //- |clear #{fv}
+    unless fv
         .ui.input
             input#single_user_select_input(type='text' placeholder='lookup user..' autocomplete='off')
             each selections
@@ -769,12 +769,12 @@ template(name='single_user_edit')
                             .ui.small.inline.header
                                 img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                                 |#{username}
-    if field_value
-        // +user_card field_value
+    if fv
+        // +user_card fv
         if is_dev
-            |#{field_value}
+            |#{fv}
         //- |#{this}
-        with user_from_id field_value
+        with user_from_id fv
             .ui.inline.header
                 img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                 |#{username}
@@ -782,14 +782,14 @@ template(name='single_user_edit')
 
 
 template(name='single_user_view')
-    if field_value
+    if fv
         div
         if icon
             +icon name=icon    
         .ui.inline.header 
             |#{title}
             |#{label}
-        with field_value
+        with fv
             with user_from_id this
                 a.ui.item(href="/u/#{username}") 
                     .content
@@ -828,7 +828,7 @@ template(name='multi_user_edit')
                             img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                             small @#{username}
     +clear_value                
-    each field_value
+    each fv
         // |#{this}
         with user_from_id this
             div
@@ -866,7 +866,7 @@ template(name='multi_doc_input')
                             strong + #{guest_name} #{first_name} #{last_name}
         //- +clear_value                
         //- .ui.list
-        //-     each field_value
+        //-     each fv
         //-         // |#{this}
         //-         +user_card
         //-         .ui.large.button
@@ -888,10 +888,10 @@ template(name='multi_user_view')
         if icon 
             // i.icon(class=icon)
             +i name=icon cl='ui avatar image'
-        |#{field_value.length}
+        |#{fv.length}
         |#{title} #{label}
         //- #{key} #{label}
-    each field_value
+    each fv
         with user_from_id this
             a.ui.item(href="/u/#{username}") 
                 .content
