--- a/client/home.jade
+++ b/client/home.jade
@@ -103,7 +103,7 @@ template(name='question_card')
         
         
 template(name='session_kve')    
-    .ui.compact.circular.button.set_session_var(class=session_button_clas)
+    .ui.compact.circular.button.set_session_var(class=session_button_class)
         if icon 
             i.icon(class=icon)
         |#{label}
@@ -114,18 +114,18 @@ template(name='session_kve')
                         
                         
                         
-template(name='unselect_tag')
-    a.unselect_tag.ui.black.big.image.circular.label.select_term(href='#')
-        if term
-            img.ui.avatar.compact.image(src=term.watson.metadata.image)    
-        strong #{this}
+// template(name='unselect_tag')
+//     a.unselect_tag.ui.black.big.image.circular.label.select_term(href='#')
+//         if term
+//             img.ui.avatar.compact.image(src=term.watson.metadata.image)    
+//         strong #{this}
 
-template(name='tag_selector')
-    // a.ui.big.image.circular.label.pointer.select_tag.select_term(href='#' title="#{count} results" class=selector_header_class)
-    a.ui.tertiary.basic.circular.button.select_tag.select_term(href='#' title="#{count} results" class=selector_header_class)
-        if term
-            if term.watson.metadata.image
-                img.ui.avatar.compact.invert.image(src=term.watson.metadata.image)    
-        | #{name}
-        // small #{count}
+// template(name='tag_selector')
+//     // a.ui.big.image.circular.label.pointer.select_tag.select_term(href='#' title="#{count} results" class=selector_header_class)
+//     a.ui.tertiary.basic.circular.button.select_tag.select_term(href='#' title="#{count} results" class=selector_header_class)
+//         if term
+//             if term.watson.metadata.image
+//                 img.ui.avatar.compact.invert.image(src=term.watson.metadata.image)    
+//         | #{name}
+//         // small #{count}
                         
