--- a/client/profile.jade
+++ b/client/profile.jade
@@ -18,30 +18,20 @@ template(name='profile')
                     |@#{username}
                 if is_current_user
                     a(href="/u/#{username}/edit")
-                        i.big.cog.link.circular.icon
-                    // +boolean_edit key='edit_mode' label='edit mode' d=true
-                    // else
-                    //     +boolean_view key='online' label='online' d=true
+                        i.big.cog.pointer.icon
                 if is_dev
                     .ui.small.inline.header #{_id}
                 if i_have_points
                     .ui.circular.button.send(title='send points')
-                        i.red.gift.large.icon
+                        i.gift.large.icon
                         span send pts
                     // .ui.circular.button.request(title='request points')
                     //     i.concierge.bell.large.teal.icon
                     //     span request
-                else
-                    .ui.disabled.circular.button(title='send points')
-                        i.red.gift.large.icon
-                        span send pts
-                    .ui.disabled.basic.circular.button(title='request points')
-                        i.concierge.bell.teal.icon
-                        span request
                         
                 if is_current_user
                     a.ui.circular.button.logout(href="#" title='log out')
-                        i.sign.out.big.icon
+                        i.sign.out.large.icon
                         |log out
                 
                 unless is_current_user
@@ -50,12 +40,15 @@ template(name='profile')
                         +user_friend_button 
                 if is_dev
                     +print_this
-                each friends
-                    a.profile_nav_item(href="/u/#{username}" title=username)
-                        if profile_image_id
-                            img.ui.mini.inline.circular.invert.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
-                        else
-                            .ui.circular.label #{initials}
+                .ui.selection.link.list
+                    each friends
+                        a.profile_nav_item.item(href="/u/#{username}" title=username)
+                            if profile_image_id
+                                img.ui.avatar.invert.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+                            else
+                                .ui.circular.label.image #{initials}
+                            .content
+                                .header #{username}
             .twelve.wide.column 
                 .ui.header #{points_earned}pts earned
                 +user_dashboard
@@ -89,27 +82,7 @@ template(name='user_dashboard')
                 i.plus.icon
                 input.add_post(type='text')
             each latest_posts
-                .ui.segment 
-                    .ui.small.header #{body}
-                    +voting_small
-                    i.reply.link.grey.icon
-                    i.clock.grey.icon
-                    i.eye.grey.icon
-                    i.remove.link.grey.icon.remove_post
-                    i.archive.link.grey.icon
-                    i.share.grey.icon
-                    +emotion_picker
-                    if replying
-                        .ui.fluid.input
-                            input.reply_body(type='text')
-                    .ui.grid
-                        .two.wide.column
-                        .fourteen.wide.column
-                            each replies
-                                div
-                                .ui.tiny.inline.header #{body}
-                                if is_author
-                                    +remove_icon
+                +post_segment
         .eight.wide.column
             .ui.segment
                 .ui.header 
@@ -126,6 +99,16 @@ template(name='user_dashboard')
                         |+1
             each income
                 .ui.tiny.header #{amount} #{_author.username}
+            .ui.segment
+                .ui.header topups
+                .ui.icon.button.add_topup
+                    i.plus.icon
+                .ui.large.list
+                    each topups
+                        .item
+                            .content
+                                |#{_when} #{amount}
+                                +remove_icon
             .ui.segment
                 .ui.header questions
                 .ui.icon.button.ask_question
@@ -147,11 +130,37 @@ template(name='user_dashboard')
                 |earnings
             .ui.header #{points} points
             i.big.rss.icon(title='log events')
-            each log_events
-                .ui.inline.header #{body}
-                |#{when}
+            .ui.large.list
+                each log_events
+                    .item 
+                        .content
+                            .header #{body}
+                            .meta #{when}
            
            
+           
+template(name='post_segment')           
+    .ui.segment 
+        .ui.small.header #{body}
+        +voting_small
+        i.reply.link.grey.icon
+        i.clock.grey.icon
+        i.eye.grey.icon
+        i.remove.link.grey.icon.remove_post
+        i.archive.link.grey.icon
+        i.share.grey.icon
+        +emotion_picker
+        if replying
+            .ui.fluid.input
+                input.reply_body(type='text')
+        .ui.grid
+            .two.wide.column
+            .fourteen.wide.column
+                each replies
+                    div
+                    .ui.tiny.inline.header #{body}
+                    if is_author
+                        +remove_icon
            
            
                 
