--- a/client/user_edit.jade
+++ b/client/user_edit.jade
@@ -85,34 +85,37 @@ template(name='user_edit_friends')
     
 
 template(name='account')
-    .ui.header 
-        i.cog.icon
-        |account
-    .ui.two.column.stackable.grid
-        .column
-            // +image_edit key='banner_image_id' icon='picture' title='banner image' d=true
-            +password_edit
-        .column
+    .ui.stackable.padded.grid
+        .four.wide.column
             .ui.header 
-                i.envelope.outline.icon
-                |emails
-            +emails_edit
-            if is_dev
-                .ui.segment
-                    i.code.icon
-                    +username_edit
-                    +boolean_edit key='disabled' label='disabled' d=true
-                    +multi_user_edit key='user_representatives' label='user representatives' d=true
-                    div
-                    with current_user
-                        .ui.button.remove_user 
-                            i.remove.icon
-                            |delete user
-            .spacer
-            +phone_edit key='phone' label='phone' icon='phone' d=true
-
-            //- +phone_editor
-    
+                i.cog.icon
+                |account
+        .twelve.wide.column
+            .ui.two.column.stackable.grid
+                .column
+                    // +image_edit key='banner_image_id' icon='picture' title='banner image' d=true
+                    +password_edit
+                .column
+                    .ui.header 
+                        i.envelope.outline.icon
+                        |emails
+                    +emails_edit
+                    if is_dev
+                        .ui.segment
+                            i.code.icon
+                            +username_edit
+                            +boolean_edit key='disabled' label='disabled' d=true
+                            +multi_user_edit key='user_representatives' label='user representatives' d=true
+                            div
+                            with current_user
+                                .ui.button.remove_user 
+                                    i.remove.icon
+                                    |delete user
+                    .spacer
+                    +phone_edit key='phone' label='phone' icon='phone' d=true
+        
+                    //- +phone_editor
+        
 template(name='username_edit')
     .ui.small.header 
         i.refresh.icon
